[package]
name = "alpha-ray"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
fast-socks5 = "1.0.0-rc.0"
fastrand = "2.3.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
protobuf = "3.7.2"
rustls = "0.23.35"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["local-offset"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "time"] }
uuid = { version = "1.19.0", features = ["serde"] }
webpki-roots = "1.0.5"
